# geomagic_touch_x_ros2

./: CMakeLists.txt  README.md  package.xml
cmake/: FindOpenHaptics.cmake
include/geomagic_touch_x/: device.hpp
launch/: calibrate.launch.py  demo_impedance_control.launch.py  device_driver.launch.py  pair.launch.py  setup.launch.py
scripts/: demo_impedance_control.py
src/: device.cpp  geomagic_touch_x_component.cpp
